# vibecoding-urlshortener

./: .editorconfig  .gitignore  AGENTS.md  README.md  alembic.ini  compose.yaml  pyproject.toml
docs/: SPEC.md
migrations/: env.py
migrations/versions/: 86c7b0cdd35d_create_urls_table.py
scripts/: init-user-db.sql
src/app/: database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_endpoints.py
