[project]
name = "url-shortener"
version = "0.1.0"
description = "URL shortener service by vibe coding via AI"
readme = "README.md"
authors = [
    { name = "Serhii Horodilov", email = "shorodilov@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "psycopg[binary]>=3.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
migrations = ["alembic"]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"

[dependency-groups]
dev = [
    "alembic",
    "pytest",
]
